# E2E-BI

./: .gitignore  Load data to SQL Server.ipynb  README.md
Dagster/: README.md  pyproject.toml  setup.cfg  setup.py
Dagster/Dagster/: definitions.py
Dagster/Dagster.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Dagster/Dagster/assets/: lailo.py
Dagster/Dagster/jobs/: job.py
Dagster/Dagster/schedules/: schedules.py
Dagster/utils/: sql.py  ssas.py
SSAS/: DemoLailo.sln  DemoLailo.smproj  Model.bim  Model.bim.layout  Model.bim_Admin.settings
sql scripts/: DIM.ETL_Load_DimCompany.sql  DIM.ETL_Load_DimDate.sql  DIM.ETL_Load_DimProduct.sql  ETL_Load_All_Dimensions.sql  FACT.ETL_Load_FactLailo.sql
